# interact

./: Cargo.toml  readme.md
src/: lib.rs
src/interact/: context.rs  error.rs  manage.rs  manager_contain.rs  mod.rs  utils.rs
src/interact/mocks/: context.rs  interact.rs  manage.rs  mod.rs
src/interact/sharp_cmd/: mod.rs
src/interact_handle/: handle_builder.rs  interact_pool.rs  mod.rs
src/message_recive/: mod.rs  recive_manage.rs
src/message_send/: img_pre_upload.rs  mod.rs  text2img.rs
