[package]
name = "interact_handle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msg_proc={path="../msg_proc"}
msg_chain={path="../msg_chain"}

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"
