[package]
name = "interact_handle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msg_proc={path="../msg_proc"}
msg_chain={path="../msg_chain"}

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.64"

reqwest = { version = "0.11", features = ["json"] }

tokio = { version = "1", features = ["full"] }

url = "2.2.2"

futures = {version="0", features=["executor",]}
futures-channel = "0.3.15"

uuid = { version = "0.8", features = ["serde", "v4"] }

threadpool = "1.8.1"

image = "0.23.14"

rand = "0.8.4"